bug squashing and number tweaking

--- a/src/app/obstacle-index/obstacle-catalog/obstacle-catalog.component.css
+++ b/src/app/obstacle-index/obstacle-catalog/obstacle-catalog.component.css
@@ -69,3 +69,8 @@ p {
     background: grey;
     border-radius: 4px;
 }
+
+
+::ng-deep .cdk-global-overlay-wrapper {
+    overflow: auto;
+  }
